# esp-dev-kits

./: .gitignore  .lbcf.yml  .pre-commit-config.yaml  README.md  README_CN.md  check_copyright_config.yaml  post-mr-note.py
.gitlab/: CODEOWNERS
.gitlab/ci/: build.yml  deploy.yml  docs.yml  pre_check.yml
docs/: conf_common.py  feedback_doc_ids.py  lang-linkcheck-warnings.txt  requirements.txt
docs/_static/css/: wide-table-scroll.css
docs/_static/js/: docs_version.js
docs/en/: disclaimer-and-copyright.rst
docs/en/_templates/: footer.html
docs/en/echoear/: index.rst  user_guide_v1.2.rst
docs/en/eol/: eol-boards.rst
docs/en/esp-dualkey/: user_guide.rst
docs/en/esp-module-prog-1-r/: index.rst  user_guide.rst
docs/en/esp-module-prog-sub-01&04/: user_guide.rst
docs/en/esp-module-prog-sub-02/: user_guide.rst
docs/en/esp-prog/: user_guide.rst
docs/en/esp-prog-2/: user_guide.rst
docs/en/esp-sensairshuttle/: user_guide_v1.0.rst
docs/en/esp-vocat/: index.rst  user_guide_v1.0.rst  user_guide_v1.2.rst
docs/en/esp-wrover-kit/: user_guide.rst  user_guide_v2.rst  user_guide_v3.rst
docs/en/esp32-c3-devkit-rust-2/: user_guide.rst
docs/en/esp32-c3-devkitc-02/: user_guide.rst
docs/en/esp32-c3-devkitm-1/: user_guide.rst
docs/en/esp32-c3-lcdkit/: user_guide.rst  user_guide_c3_lcd_ev_board.rst
docs/en/esp32-c5-devkitc-1/: user_guide.rst  user_guide_v1.1.rst
docs/zh_CN/: disclaimer-and-copyright.rst
examples/echoear/: README.md
examples/esp-sensairshuttle/: README.md
examples/esp-sensairshuttle/examples/factory_demo/components/gen_bmgr_codes/: CMakeLists.txt  gen_board_device_config.c  gen_board_device_custom.h  gen_board_device_handles.c  gen_board_info.c  gen_board_periph_config.c  gen_board_periph_handles.c  idf_component.yml
examples/esp-vocat/: README.md
examples/esp32-s31-korvo/: README.md
examples/esp32-s31-korvo/examples/factory_demo/main/: CMakeLists.txt  coffee_assets.c  coffee_assets.h  factory_demo_audio.c  factory_demo_audio.h  factory_demo_camera.c  factory_demo_camera.h  factory_demo_usb_hid.c  factory_demo_usb_hid.h  idf_component.yml  main.c  mmap_generate_coffee_pjpg.h
examples/esp32-s31-korvo/examples/factory_demo/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
examples/esp32-s31-korvo/examples/factory_demo/ui/components/: ui_comp.c  ui_comp.h  ui_comp_button.c  ui_comp_button.h  ui_comp_cta_container.c  ui_comp_cta_container.h  ui_comp_header.c  ui_comp_header.h  ui_comp_home_sliders.c  ui_comp_home_sliders.h  ui_comp_homeslider.c  ui_comp_homeslider.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_parameter.c  ui_comp_parameter.h  ui_comp_progress.c  ui_comp_progress.h  ui_comp_ready_button.c  ui_comp_ready_button.h  ui_comp_selector.c  ui_comp_selector.h  ui_comp_separator.c  ui_comp_separator.h  ui_comp_slider1.c  ui_comp_slider1.h  ui_comp_slider3.c  ui_comp_slider3.h  ui_comp_steps.c  ui_comp_steps.h
examples/esp32-s31-korvo/examples/factory_demo/ui/fonts/: ui_font_H3_bold.c  ui_font_P1_bold.c
examples/esp32-s31-korvo/examples/factory_demo/ui/images/: ui_img_1726788397.c  ui_img_266850372.c  ui_img_alert_png.c  ui_img_arrow_png.c  ui_img_arrows_png.c  ui_img_beans_white_png.c  ui_img_big_espresso_png.c  ui_img_big_latte_png.c  ui_img_big_ristretto_png.c  ui_img_bigbean_png.c  ui_img_ble_png.c  ui_img_chevron_png.c  ui_img_clean_png.c  ui_img_coffee_illustration_png.c  ui_img_cup1_png.c  ui_img_cup_png.c  ui_img_cups_png.c  ui_img_disabledbean_png.c  ui_img_done_60_png.c  ui_img_done_png.c  ui_img_espresso_png.c  ui_img_foam_body_png.c  ui_img_foam_png.c  ui_img_languages_png.c  ui_img_latte_illustration_png.c  ui_img_light_png.c  ui_img_parameters_png.c  ui_img_play_button_png.c  ui_img_profile_png.c  ui_img_roller_png.c  ui_img_settings_png.c  ui_img_slider_bg_png.c  ui_img_standby_png.c  ui_img_tank_png.c  ui_img_taste1_png.c  ui_img_temp_body_png.c  ui_img_temperature_png.c  ui_img_top_png.c  ui_img_units_png.c  ui_img_water_png.c  (+3 more)
examples/esp32-s31-korvo/examples/factory_demo/ui/screens/: ui_Screen_Add_coffee.c  ui_Screen_Add_coffee.h  ui_Screen_Add_water.c  ui_Screen_Add_water.h  ui_Screen_Brewing.c  ui_Screen_Brewing.h  ui_Screen_Brewing_Done.c  ui_Screen_Brewing_Done.h  ui_Screen_Customize.c  ui_Screen_Customize.h  ui_Screen_Customize2.c  ui_Screen_Customize2.h  ui_Screen_Home.c  ui_Screen_Home.h  ui_Screen_Home_espresso.c  ui_Screen_Home_espresso.h  ui_Screen_Home_ristretto.c  ui_Screen_Home_ristretto.h  ui_Screen_Ready.c  ui_Screen_Ready.h  ui_Screen_Settings.c  ui_Screen_Settings.h  ui_Screen_Splash_screen.c  ui_Screen_Splash_screen.h
tools/: build_apps.py
tools/ci/: executable-list.txt
(+278 files in other folders)
