SET(SOURCES components/ui_comp_button.c
    components/ui_comp_cta_container.c
    components/ui_comp_slider1.c
    components/ui_comp_slider3.c
    components/ui_comp_header.c
    components/ui_comp_home_sliders.c
    components/ui_comp_homeslider.c
    components/ui_comp_parameter.c
    components/ui_comp_progress.c
    components/ui_comp_ready_button.c
    components/ui_comp_selector.c
    components/ui_comp_separator.c
    components/ui_comp_steps.c
    components/ui_comp.c
    screens/ui_Screen_Splash_screen.c
    screens/ui_Screen_Home.c
    screens/ui_Screen_Home_ristretto.c
    screens/ui_Screen_Home_espresso.c
    screens/ui_Screen_Customize.c
    screens/ui_Screen_Customize2.c
    screens/ui_Screen_Brewing.c
    screens/ui_Screen_Brewing_Done.c
    screens/ui_Screen_Settings.c
    screens/ui_Screen_Add_water.c
    screens/ui_Screen_Add_coffee.c
    screens/ui_Screen_Ready.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_bg_png.c
    images/ui_img_shape1_png.c
    images/ui_img_play_button_png.c
    images/ui_img_big_espresso_png.c
    images/ui_img_big_ristretto_png.c
    images/ui_img_big_latte_png.c
    images/ui_img_arrow_png.c
    images/ui_img_ble_png.c
    images/ui_img_wifi_png.c
    images/ui_img_settings_png.c
    images/ui_img_latte_illustration_png.c
    images/ui_img_chevron_png.c
    images/ui_img_266850372.c
    images/ui_img_disabledbean_png.c
    images/ui_img_beans_white_png.c
    images/ui_img_cup_png.c
    images/ui_img_cups_png.c
    images/ui_img_coffee_illustration_png.c
    images/ui_img_espresso_png.c
    images/ui_img_slider_bg_png.c
    images/ui_img_top_png.c
    images/ui_img_parameters_png.c
    images/ui_img_1726788397.c
    images/ui_img_temp_body_png.c
    images/ui_img_temperature_png.c
    images/ui_img_foam_body_png.c
    images/ui_img_foam_png.c
    images/ui_img_done_png.c
    images/ui_img_standby_png.c
    images/ui_img_light_png.c
    images/ui_img_water_png.c
    images/ui_img_clean_png.c
    images/ui_img_taste1_png.c
    images/ui_img_cup1_png.c
    images/ui_img_units_png.c
    images/ui_img_languages_png.c
    images/ui_img_profile_png.c
    images/ui_img_roller_png.c
    images/ui_img_alert_png.c
    images/ui_img_tank_png.c
    images/ui_img_wave1_png.c
    images/ui_img_wave_bottom_png.c
    images/ui_img_done_60_png.c
    images/ui_img_arrows_png.c
    images/ui_img_bigbean_png.c
    fonts/ui_font_H1_bold.c
    fonts/ui_font_H2_bold.c
    fonts/ui_font_H2_bold.c
    fonts/ui_font_H3_bold.c
    fonts/ui_font_Min.c
    fonts/ui_font_P1_bold.c
    fonts/ui_font_P1_medium.c
    fonts/ui_font_P2_medium.c
    fonts/ui_font_badge2.c
    fonts/ui_font_exclamation.c
    fonts/ui_font_icon.c)

add_library(ui ${SOURCES})
